add rest client

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="base_url" translatable="false">http://www.omdbapi.com/?apikey=33d3ea25</string>
+
     <string name="app_name" translatable="false">firstApp</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
