--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="internal_storage">Internal storage</string>
     <string name="back_message">Please click BACK again to exit</string>
     <string name="show_favourite">Show favourite</string>
+    <string name="ratings">Ratings:</string>
+    <string name="story_line">Story Line:</string>
 </resources>
