--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="show_favourite">Show favourite</string>
     <string name="ratings">Ratings:</string>
     <string name="story_line">Story Line:</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="signup_message">Already have account? Sign in.</string>
+    <string name="signin_message">Don\'t have account? Sign up.</string>
+    <string name="sign_up">Create account</string>
 </resources>
